# http/swagger.yml
@@ -5502,6 +5502,44 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  '/checks/query/preview':
+    post:
+      operationId: PreviewChecksQuery
+      tags:
+        - Checks
+      summary: check query preview
+      requestBody:
+        description: check to create
+        required: true
+        content:
+          application/json:
+            schema:
+                $ref: "#/components/schemas/Check"
+      responses:
+        '200':
+          description: the check query requested
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FluxResponse"
+        '400':
+          description: invalid request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '404':
+          description: check not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   '/notificationRules/{ruleID}':
     get:
       operationId: GetNotificationRulesID
